# epoch

./: .gitattributes  .gitignore  .gitmodules  README.md  codecov.yml  epoch_actor_design_doc.md  package.json  pnpm-lock.yaml
.github/workflows/: build-cpp.yml  build-dotnet.yml  build-go.yml  build-java.yml  build-node.yml  build-python.yml  docs.yml  nightly.yml
cpp/: CMakeLists.txt
cpp/include/epoch/: actor_id.h  aeron_transport.h  engine.h  epoch.h  transport.h
cpp/src/: actor_id.cpp  aeron_transport.cpp  engine.cpp  epoch.cpp
cpp/tests/: aeron_transport_test.cpp  core_test.cpp  epoch_vector_test.cpp
docs/: README.md
docs/.vuepress/: config.js
docs/guide/: README.md  behavior.md  concepts.md  epoch-actor-design.md  languages.md  protocol.md  transport-aeron.md
docs/guide/languages/: cpp.md  dotnet.md  go.md  java.md  node.md  python.md
dotnet/: ActorId.cs  AeronTransport.cs  Engine.cs  Epoch.csproj  Transport.cs  Version.cs
dotnet/Epoch.Tests/: AeronTests.cs  Epoch.Tests.csproj  Program.cs  VectorTests.cs
go/: actor_id.go  aeron_transport.go  aeron_transport_stub_test.go  aeron_transport_test.go  codec_extra_test.go  epoch.go  epoch_test.go  go.mod  transport.go
java/: pom.xml
java/scripts/: fetch-aeron.sh  run-coverage.sh  run-tests.sh
java/src/main/java/io/epoch/: ActorId.java  AeronMessageCodec.java  AeronTransport.java  Engine.java  InMemoryTransport.java  Transport.java  Version.java
java/src/test/java/io/epoch/: VectorTestMain.java
native/: CMakeLists.txt  build.sh
native/include/: epoch_aeron.h
native/src/: epoch_aeron.c
node/: actor-id.js  index.js  package.json  pnpm-lock.yaml  tsconfig.json
node/scripts/: normalize-coverage.js
node/src/: actor-id.ts  aeron-native.ts  index.ts
node/test/: aeron.test.js  version.test.js
python/: pyproject.toml
python/epoch/: __init__.py  actor_id.py  aeron_transport.py  engine.py  transport.py
python/tests/: test_aeron_frame.py  test_version.py
test-vectors/: epoch_vector_v1.txt
